name:                test-wreq
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/oherrala/haskell-wreq#readme
license:             MIT
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          oherrala@gmail.com
copyright:           2016 Ossi Herrala
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable test-wreq
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http-client
                     , lens
                     , wreq
